src/sass/style.scss
/* ... */
.hero-band .h1-font {
  @extend h1;
}

.hero-band h1,
.hero-band .h1-font {
  margin-bottom: 10px;
  line-height: 1;
  font-size: $h2-size * 1.12;
}

p.hero-text {
  line-height: 1.2;
}

/* blog and post styles */

#post header {
  padding: 0px;
  margin-bottom: 0px;
}

#post main {
  padding-top: 0px;
}

nav.wrapper-lg {
  margin-bottom: 0px;
  display: flex;
  align-items: flex-end;
}

#post .nav-wrapper {
  padding: 35px 0px;
  background-color: $primary-color;
}

#post article {
  padding-bottom: 1.45rem;
  p:last-child {
    margin-bottom: 0px;
  }
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  ul,
  ol {
    max-width: 720px;
    width: 92%;
    margin-left: auto;
    margin-right: auto;
  }
}

nav[aria-label="breadcrumbs"] {
  border-bottom: 0px;
  padding-top: 35px;
  padding-bottom: 20px;

  li {
    font-weight: 700;
    padding-right: 7px;
    &::after {
      content: "/";
      font-size: 0.8em;
      color: $text-color;
    }

    a {
      color: $link-color;
      font-weight: 700;
      font-size: $h6-size;
      &::after {
        height: 2px;
        background-color: $link-color;
      }
    }
  }
}

#post .col figure {
  margin-bottom: 0px;
}

figcaption {
  text-align: center;
  font-size: $h6-size;
  font-style: italic;
  color: #ddd;
}

.max500-img,
.max720-img  {
  margin-left: auto;
  margin-right: auto;
}

.max500-img {
  max-width: 500px;
}

.max720-img {
  max-width: 720px;
}

nav[aria-label="breadcrumbs"] ol.nav-list {
  margin: 0px;
  padding: 0px;
}

#post h1 {
  margin-top: 0px;
}


#post {
  main {
    ol,
    ul {
      padding-left: 2rem;
    }
  }
}

#post > div {
  padding: 35px 0px;
}

.post-nav div,
nav div:last-child {
  margin-bottom: 0;
}

.post-nav a {
  text-decoration: none;
}

.post-nav div {
  margin-top: 0px;
}

.post-nav {
  .post-nav-title,
  .index-nav-title {
    font-size: $h4-size;
    font-weight: 900;
  }

  .post-nav-title {
    max-width: 90%;
  }
}

.block-right .post-nav-title {
  margin-right: 0px;
  margin-left: auto;
}

.post-nav div span.post-nav-label {
  @include bold-font;
  font-size: $h6-size;
  text-transform: uppercase;
  display: block;
  color: $text-color;
}

.post-nav div span {
  &.back-arrow,
  &.forward-arrow {
    @include bold-font;
    font-size: $h4-size;
    width: auto;
    color: $link-color;
    display: inline-block;
  }

  &.back-arrow {
    padding-right: 0.5rem;
  }

  &.forward-arrow {
    padding-left: 0.5rem;
  }
}

.post-list .u-small {
  margin-top: 5px;
  margin-bottom: 5px;
}

.post-list .card h4,
.post-list .card h2,
.cta h4 {
  margin-top: 0px;
  margin-bottom: 0px;
}

.label {
  color: $text-color;
}

.post-nav > div {
  margin-bottom: 10px;
}

nav .page-number {
  margin: 0px 0px 5px 0px;
  padding-top: 35px;
  font-weight: 700;
}

.post-nav {
  padding: 35px 0;
}

.page-number + .post-nav {
  padding-top: 0px;
}

ul.post-list {
  margin: 0;
}

.post-list li {
  list-style: none;
  padding-bottom: 35px;
  margin-bottom: 0px;
}

.tag {
  padding-right: 10px;
}

a.tag {
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
}

.featured-image {
  max-width: 400px;
  margin: auto;
}

.post-list .featured-image {
  margin: 0px;
}

/* home */
.video-container,
.audio-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
  border-radius: 7px;
  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
}

.video-container h4,
.audio-container h4 {
  font-size: 0px;
}

.audio-container iframe #content {
  margin: 0px;
}

.audio-container {
  padding-bottom: 165px;
}

.audio-container iframe,
.audio-container object,
.audio-container embed,
.video-container iframe,
.video-container object,
.video-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  -webkit-clip-path: inset(0% round 7x);
  clip-path: inset(0% round 7px);
}

#post .video-container {
  margin: 20px 0;
}

#post .audio-container {
  border-radius: 7px;
  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
  margin: 20px 0;
}

#post .audio-container iframe {
  -webkit-clip-path: inset(0% round 7x);
  clip-path: inset(0% round 7px);
  margin: 0px;
  margin-bottom: -7px;
}

#home .u-header,
#home .cta {
  margin-right: 7px;
  margin-left: 7px;
}

#home .u-header ~ a.text-btn {
  margin-left: 7px;
  transform: translateY(-20px);
}

#home header h1,
#home header .h1-font {
  margin-bottom: 0px;
}

#home .hero-band {
  margin-bottom: 0px;
}

#home .hero-band .wrapper-lg {
  display: flex;
  align-items: flex-end;
  height: 75px;
}

#home header {
  @include banner-background("/images/background/flower-375.jpg", 105px);
}

@media (min-width: 768px) {
  #home header {
    @include banner-background("/images/background/flower-768.jpg", 115px);
  }
  #home .hero-band .wrapper-lg {
    height: 100px;
  }
}

@media (min-width: 1024px) {
  #home header {
    @include banner-background("/images/background/flower-1024.jpg", 250px);
  }
}

@media (min-width: 1440px) {
  #home header {
    @include banner-background("/images/background/flower-1440.jpg", 350px);
  }
  #home .hero-band .wrapper-lg {
    height: 200px;
  }
}

/* blockquote */

blockquote {
  font-style: italic;
  font-weight: 700;
}

blockquote p {
  border-left: 2px solid $primary-color;
  font-size: $h4-size;
  padding-left: 20px;
  margin-bottom: 5px;
}

blockquote span {
  display: block;
  font-size: $h5-size;
  font-weight: normal;
  font-style: normal;
}

blockquote span:before {
  content: "\2014 ";
}

blockquote p,
blockquote span {
  line-height: 1.2;
}

#about {
  main h2:first-of-type {
    margin-top: 0px;
  }
}

#credits main {
 padding-top: 0px;
}

#credits img {
  display: block;
  margin: 0 auto;
}

/* Gird classes */
.cols-1fr-1fr > .col {
  margin-bottom: 35px;
}
/* ... */

